--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon ./dist/server.js",
+    "start:prod": "NODE_ENV=production node ./dist/server.js",
     "typescript": "tsc -w"
   },
   "author": "Abhijit Mahato",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "morgan": "^1.10.0"
